--- a/s.css
+++ b/s.css
@@ -651,6 +651,18 @@ body {
   top: 10px;
   right: 20px;
 }
+.section-seven {
+  text-align: center;
+  background-color: beige;
+  background-size: cover;
+  padding: 40px;
+  width: 100%;
+  height: 100%;
+}
+
+.section-seven__container {
+  width: 100%;
+}
 
 .connect__icons {
   justify-content: center;
