--- a/style.css
+++ b/style.css
@@ -1028,6 +1028,7 @@ body {
   .section-three__main {
     padding: 0;
     margin-top: 90px;
+    margin-left: 40px;
   }
   .section-three h1 {
     margin-left: 110px;
